--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "HordeShare": {
+    "hordeshare": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "HordeShare:build:production"
+              "buildTarget": "hordeshare:build:production"
             },
             "development": {
-              "buildTarget": "HordeShare:build:development"
+              "buildTarget": "hordeshare:build:development"
             }
           },
           "defaultConfiguration": "development"
