--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "dist/hordeshare/browser",
+    "public": "dist/horde-share/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -17,7 +17,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "/index.csr.html"
       }
     ]
   }
